--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
-    "gulp-cached": "^1.1.1",
     "gulp-clean-css": "^4.3.0",
-    "gulp-cssnano": "^2.1.3",
     "gulp-npm-dist": "^1.0.3",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
@@ -23,12 +21,12 @@
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
-    "gulp-useref-plus": "^0.0.8"
+    "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "select2": "^4.1.0-rc.0"
   },
   "scripts": {
     "serve": "node ./node_modules/gulp/bin/gulp.js",
